force-app/main/default/objects/RecordTypeMappingCMT__mdt/RecordTypeMappingCMT__mdt.object-meta.xml
<CustomObject>
    <label>RecordTypeMappingCMT</label>
    <pluralLabel>RecordTypeMappingCMT</pluralLabel>
</CustomObject>