force-app/main/default/objects/RecordTypeMappingCMT__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>CountryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>